fixed spacing for blob on contact page + changed html icon

--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -28,6 +28,10 @@
     justify-content: center;
 }
 
+.contact-content-right {
+    width: 350px;
+}
+
 .contact-list {
     list-style: none;
     display: flex;
